--- a/lib/elmspark_web/components/layouts/root.html.heex
+++ b/lib/elmspark_web/components/layouts/root.html.heex
@@ -10,7 +10,12 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
-<script src="/assets/main.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+
+<!-- and it's easy to individually load additional languages -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/elm.min.js"></script>
+
   </head>
   <body class="bg-white antialiased">
     <ul class="relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
@@ -55,6 +60,6 @@
       <% end %>
     </ul>
     <%= @inner_content %>
-<script>var app = Elm.Main.init();</script>
+<script>hljs.highlightAll();</script>
   </body>
 </html>
